# Swen

./: .gitignore  README.md  README_EN.md  daemon.html  index.html  package-lock.json  package.json  vite.config.ts
doc/: site_config.json
doc/config/: config.json
doc/docs/doc/: README.md  config.json  sidebar.yaml
doc/docs/doc/API/: README.md
doc/docs/privacy/: README.md  config.json  sidebar.yaml
doc/pages/index/: README.md
doc/static/css/: custom.css
src/: App.vue  main.ts  vue-markdown.d.ts
src-tauri/: Cargo.toml  Entitlements.plist  info.plist  tauri.appstore.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  hotkey.rs  lib.rs  llm.rs  main.rs  ocr.rs  screenshot.rs  tray.rs  windows.rs
src/components/: DeepseekExplanation.vue
src/components/explain/: DeepseekExplanation.vue
src/components/settings/: about.vue  funding.vue  general.vue  history.vue  model.vue  shortcut.vue
src/composables/: useConfig.ts  useGetState.ts
src/locales/: en.ts  zh.ts
src/router/: index.ts
src/utils/: database.ts  debounce.ts  language.ts  logger.ts  prompts.ts  store.ts  textAnalysis.ts
src/views/: default.vue  home.vue  screenshot.vue  settings.vue
